--- a/src/css/LinkCard.css
+++ b/src/css/LinkCard.css
@@ -1,12 +1,13 @@
 .LinkCard {
 	position: relative;
+	min-height: 250px;
+	padding-top: 20px;
 }
 
-.link-spanner {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	z-index: 1;
+.LinkCard:hover {
+	background-color: #fcfcfc;
+}
+
+.LinkCard-img {
+	max-width: 150px;
 }
