Rename ShoppingCartLink comp to CartLink

--- a/src/css/CartLink.css
+++ b/src/css/CartLink.css
@@ -1,8 +1,8 @@
-.ShoppingCartLink {
+.CartLink {
 	position: relative;
 }
 
-.shopping-cart-items-number {
+.cart-items-number {
 	position: absolute;
 	top: 20%;
 	left: 50%;
