--- a/src/css/SKGrid.css
+++ b/src/css/SKGrid.css
@@ -7,7 +7,7 @@
 .sk-cube-grid .sk-cube {
   width: 33%;
   height: 33%;
-  background-color: var(--carrot);
+  background-color: var(--primary);
   float: left;
   -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
   animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
