--- a/src/css/SKGrid.css
+++ b/src/css/SKGrid.css
@@ -5,8 +5,8 @@
 }
 
 .sk-cube-grid .sk-cube {
-  width: 33%;
-  height: 33%;
+  width: 33.3333333333%;
+  height: 33.3333333333%;
   background-color: var(--primary);
   float: left;
   -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
